# autoi-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  server.py
data/: auth_keywords.json  config.json  dangerous_sinks.json  risk_weights.json  system_filters.json
src/autoi_mcp/: __init__.py  config.py  output.py  server.py
src/autoi_mcp/analysis/: risk.py
src/autoi_mcp/data/: __init__.py  cgi_sources.json  config.json  loader.py  web_endpoint_patterns.json  web_keywords.json  web_server_patterns.json
src/autoi_mcp/ida/: __init__.py  runner.py  ruuner.py  triage_script.py
src/autoi_mcp/models/: binary.py  risk.py  triage.py  web.py
src/autoi_mcp/scanner/: __init__.py  elf.py  elf_parser.py  web.py
src/autoi_mcp/tools/: __init__.py  info.py  triage.py  verify.py  web.py  workspace.py
