[project]
name = "autoi-mcp"
version = "0.6.0"
description = "MCP Server for automated IoT firmware binary security auditing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.2",
    "pwntools>=4.15.0",
    "pydantic>=2.13.4",
]

[project.scripts]
autoi-mcp = "autoi_mcp.server:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"autoi_mcp.data" = ["*.json"]
